@@ -260,10 +260,10 @@ This is a list of regexps and regexp matches."
   :type '(repeat regexp))
 
 (defcustom message-deletable-headers '(Message-ID Date Lines)
-  "Headers to be deleted if they already exist and were generated by message previously."
+  "Headers to delete if present and previously generated by message."
   :group 'message-headers
   :link '(custom-manual "(message)Message Headers")
-  :type 'sexp)
+  :type '(repeat (symbol :tag "Header")))
 
 (defcustom message-ignored-news-headers
   "^NNTP-Posting-Host:\\|^Xref:\\|^[BGF]cc:\\|^Resent-Fcc:\\|^X-Draft-From:\\|^X-Gnus-Agent-Meta-Information:\\|^X-Message-SMTP-Method:\\|^X-Gnus-Delayed:"
@@ -1112,7 +1112,10 @@ If t, the `message-signature-file' file will be inserted instead.
 If a function, the result from the function will be used instead.
 If a form, the result from the form will be used instead."
   :version "23.2"
-  :type 'sexp
+  :type '(choice string (const :tag "Contents of signature file" t)
+		 function
+		 sexp)
+  :risky t
   :link '(custom-manual "(message)Insertion Variables")
   :group 'message-insertion)
 
@@ -1331,6 +1334,7 @@ The value should be an expression to test whether the problem will
 actually occur."
   :group 'message-sending
   :link '(custom-manual "(message)Mail Variables")
+  :risky t
   :type 'sexp)
 
 ;;;###autoload
